--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,10 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>4.21.0</version>
+        </dependency>
     </dependencies>
-
 </project>
