--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
             <artifactId>selenium-api</artifactId>
             <version>4.21.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.0.9</version>
+        </dependency>
     </dependencies>
 </project>
